[package]
name = "kryptor"
version = "0.1.2"
edition = "2021"
description = "A simple command-line cryptography tool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "2.33"
base64 = "0.13"
base32 = "0.4.0"
sha2 = "0.10.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"